# abstractrepo-pypi

./: README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
src/abstractrepo/: __init__.py  exceptions.py  paging.py  repo.py
tests/: examples_test.py  exceptions_test.py  filter_test.py  order_test.py
tests/fixtures/: classes.py  providers.py
tests/providers/: common.py  filter.py  order.py
