[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "# pragma: no cover",
]
exclude_lines = [
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "# pragma: no cover",
]
